--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1"
+  },
+  "babel": {
+    "env": {}
   }
 }
