--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "frontend for understory application",
   "scripts": {
+    "build": "webpack --config config/webpack.config.js",
     "test": "jest"
   },
   "repository": {
@@ -24,11 +25,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1"
-  },
-  "babel": {
-    "env": {}
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.10.0"
   }
 }
