--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "frontend for understory application",
   "scripts": {
     "build": "webpack --config config/webpack.config.js",
+    "serve:dev": "webpack-dev-server --config config/webpack.config.js",
     "test": "jest"
   },
   "repository": {
@@ -31,6 +32,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.1",
-    "webpack": "^3.10.0"
+    "copy-webpack-plugin": "^4.3.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
