--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-logger": "^3.0.6",
     "three": "^0.89.0"
   },
   "devDependencies": {
