--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "webpack --config config/webpack.config.js",
     "serve:dev": "webpack-dev-server --config config/webpack.config.js",
+    "serve:prod": "node ./server/index.js",
     "test": "jest"
   },
   "repository": {
@@ -18,12 +19,16 @@
   },
   "homepage": "https://github.com/wyattlindsey/understory-client#readme",
   "dependencies": {
+    "chalk": "^2.3.0",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
+    "serve-favicon": "^2.4.5",
     "three": "^0.89.0"
   },
   "devDependencies": {
