--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-preset-react-app": "^3.1.1",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
     "postcss": "^6.0.16",
     "postcss-advanced-variables": "^2.3.0",
     "postcss-flexbugs-fixes": "^3.3.0",
