--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "main": "server/index.js",
   "scripts": {
     "build": "webpack --config config/webpack.config.js",
+    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false",
     "heroku-postbuild":
-      "export NPM_CONFIG_PRODUCTION=false; webpack --config config/webpack.config.js; export NPM_CONFIG_PRODUCTION=true",
+      "webpack --config config/webpack.config.js; export NPM_CONFIG_PRODUCTION=true",
     "serve:dev": "webpack-dev-server --config config/webpack.config.js",
     "serve:prod": "node ./server/index.js",
     "test": "jest"
