--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "heroku-prebuild": "npm install --only=dev",
     "heroku-postbuild": "webpack --config config/webpack/webpack.config.js",
     "serve:dev": "webpack-dev-server --config config/webpack/webpack.config.js",
-    "serve:prod": "nodemon --watch server ./server/index.js",
+    "serve:prod": "nodemon ./server/index.js",
     "start": "node ./server/index.js",
     "test": "jest"
   },
@@ -58,6 +58,8 @@
     "postcss-nested": "^3.0.0",
     "postcss-partial-import": "^4.1.0",
     "react-css-modules": "^4.7.1",
+    "react-dev-utils": "^5.0.0",
+    "react-hot-loader": "^3.1.3",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
