--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
     "serve-favicon": "^2.4.5",
-    "three": "^0.89.0",
-    "webpack": "^3.10.0"
+    "three": "^0.89.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
@@ -62,6 +61,7 @@
     "react-dev-utils": "^5.0.0",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.20.1",
+    "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   }
 }
