--- a/package.json
+++ b/package.json
@@ -26,19 +26,6 @@
   },
   "homepage": "https://github.com/wyattlindsey/understory-client#readme",
   "dependencies": {
-    "chalk": "^2.3.0",
-    "express": "^4.16.2",
-    "morgan": "^1.9.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-immutable-state-invariant": "^2.1.0",
-    "redux-logger": "^3.0.6",
-    "serve-favicon": "^2.4.5",
-    "three": "^0.89.0"
-  },
-  "devDependencies": {
     "autoprefixer": "^7.2.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -47,9 +34,12 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.1",
+    "chalk": "^2.3.0",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.9",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "morgan": "^1.9.0",
     "nodemon": "^1.14.12",
     "postcss": "^6.0.16",
     "postcss-advanced-variables": "^2.3.0",
@@ -57,9 +47,17 @@
     "postcss-loader": "^2.0.10",
     "postcss-nested": "^3.0.0",
     "postcss-partial-import": "^4.1.0",
+    "react": "^16.2.0",
     "react-css-modules": "^4.7.1",
+    "react-dom": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-hot-loader": "^3.1.3",
+    "redux": "^3.7.2",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-logger": "^3.0.6",
+    "react-redux": "^5.0.6",
+    "serve-favicon": "^2.4.5",
+    "three": "^0.89.0",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
