--- a/package.json
+++ b/package.json
@@ -41,25 +41,28 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.12",
+    "object-assign": "^4.1.1",
     "postcss": "^6.0.16",
     "postcss-advanced-variables": "^2.3.0",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.0.10",
     "postcss-nested": "^3.0.0",
     "postcss-partial-import": "^4.1.0",
+    "promise": "^8.0.1",
     "react": "^16.2.0",
     "react-css-modules": "^4.7.1",
-    "react-dom": "^16.2.0",
     "react-dev-utils": "^5.0.0",
+    "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
-    "react-redux": "^5.0.6",
     "serve-favicon": "^2.4.5",
-    "three": "^0.89.0",
     "style-loader": "^0.20.1",
+    "three": "^0.89.0",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
