--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "server/index.js",
   "scripts": {
     "build": "webpack --config config/webpack/client.js",
-    "build:server": "webpack -- config config/webpack/server.js",
+    "build:server": "webpack --config config/webpack/server.js",
     "heroku-postbuild": "webpack --config config/webpack/client.js",
     "serve:prod": "nodemon ./server/index.js",
     "start": "node ./server/index.js",
@@ -39,6 +39,8 @@
     "css-loader": "^0.28.9",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
+    "handlebars-loader": "^1.6.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.12",
     "object-assign": "^4.1.1",
@@ -61,6 +63,7 @@
     "serve-favicon": "^2.4.5",
     "style-loader": "^0.20.1",
     "three": "^0.89.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
     "whatwg-fetch": "^2.0.3"
