add handlebars config - not finding partials though

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "handlebars": "^4.0.11",
     "handlebars-loader": "^1.6.0",
+    "html-webpack-plugin": "^2.30.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.12",
     "object-assign": "^4.1.1",
