--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.6.0",
     "hbs": "^4.0.1",
+    "html-webpack-exclude-assets-plugin": "^0.0.5",
     "html-webpack-plugin": "^2.30.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.12",
