--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
   "scripts": {
     "build": "yarn build:client; yarn build:server",
     "build:prod": "export NODE_ENV=production; yarn build",
-    "build:client":
-      "export NODE_ENV=production; webpack --config config/webpack/client.js",
-    "build:server":
-      "export NODE_ENV=production; webpack --config config/webpack/server.js",
+    "build:client": "export NODE_ENV=production; webpack --config config/webpack/client.js",
+    "build:server": "export NODE_ENV=production; webpack --config config/webpack/server.js",
     "serve:dev": "export NODE_ENV=development; nodemon ./server/index.js",
     "serve:prod": "export NODE_ENV=production; node ./server/index.js",
     "start": "yarn serve:prod",
-    "start:dev":
-      "export NODE_ENV=development; webpack-dev-server --config config/webpack/client.js",
+    "start:dev": "export NODE_ENV=development; webpack-dev-server --config config/webpack/client.js",
     "start:prod": "export NODE_ENV=production; yarn build; yarn serve:prod",
     "heroku-postbuild": "yarn build:prod",
     "test": "jest"
