--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "postcss-nested": "^3.0.0",
     "postcss-partial-import": "^4.1.0",
     "promise": "^8.0.1",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-css-modules": "^4.7.1",
     "react-dev-utils": "^5.0.0",
