--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.0",
     "redux": "^3.7.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
