--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "chalk": "^2.3.0",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.9",
+    "eslint": "^4.18.2",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.9.0",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
