--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^0.28.9",
     "eslint": "^4.18.2",
     "eslint-config-react-app": "^2.1.0",
+    "eslint-import-resolver-webpack": "^0.9.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-import": "^2.9.0",
