--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "next",
     "file-loader": "^1.1.6",
     "handlebars": "^4.0.11",
-    "handlebars-loader": "^1.6.0",
+    "handlebars-loader": "^1.7.0",
     "hbs": "^4.0.1",
     "html-webpack-exclude-assets-plugin": "^0.0.7",
     "html-webpack-plugin": "^3.1.0",
