add flow type checking

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.1",
     "chalk": "^2.3.0",
@@ -53,6 +54,8 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "next",
     "file-loader": "^1.1.6",
+    "flow-babel-webpack-plugin": "^1.1.1",
+    "flow-bin": "^0.69.0",
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.7.0",
     "hbs": "^4.0.1",
