--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "scripts": {
     "build": "yarn build:client; yarn build:server",
     "build:prod": "export NODE_ENV=production; yarn build",
-    "build:client": "export NODE_ENV=production; webpack --config config/webpack/client.js",
-    "build:server": "export NODE_ENV=production; webpack --config config/webpack/server.js",
+    "build:client":
+      "export NODE_ENV=production; webpack --config config/webpack/client.js",
+    "build:server":
+      "export NODE_ENV=production; webpack --config config/webpack/server.js",
     "serve:dev": "export NODE_ENV=development; nodemon ./server/index.js",
     "serve:prod": "export NODE_ENV=production; node ./server/index.js",
     "start": "yarn serve:prod",
-    "start:dev": "export NODE_ENV=development; webpack-dev-server --config config/webpack/client.js",
+    "start:dev":
+      "export NODE_ENV=development; webpack-dev-server --config config/webpack/client.js",
     "start:prod": "export NODE_ENV=production; yarn build; yarn serve:prod",
     "heroku-postbuild": "yarn build:prod",
     "test": "jest"
@@ -36,10 +39,14 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "chalk": "^2.3.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.9",
@@ -91,5 +98,17 @@
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
     "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-jest": "^22.4.3",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-replace-object-assign": "^1.0.0",
+    "create-react-class": "^15.6.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-redux": "^0.2.1",
+    "jest": "^22.4.3",
+    "react-test-renderer": "^16.3.1",
+    "redux-test-utils": "^0.2.2"
   }
 }
