--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "hbs": "^4.0.1",
     "html-webpack-exclude-assets-plugin": "^0.0.7",
     "html-webpack-plugin": "^3.1.0",
+    "material-ui": "next",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.12",
     "object-assign": "^4.1.1",
