--- a/package.json
+++ b/package.json
@@ -77,20 +77,21 @@
     "postcss-partial-import": "^4.1.0",
     "promise": "^8.0.1",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "react": "^15.6.1",
     "react-css-modules": "^4.7.1",
     "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^15.6.1",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.0",
+    "react-three-renderer": "^3.2.4",
     "redux": "^3.7.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
     "serve-favicon": "^2.4.5",
     "style-loader": "^0.20.1",
-    "three": "^0.89.0",
+    "three": "^0.91.0",
     "url-loader": "^0.6.2",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
@@ -103,7 +104,7 @@
     "babel-plugin-transform-replace-object-assign": "^1.0.0",
     "create-react-class": "^15.6.3",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-15": "^1.0.5",
     "enzyme-redux": "^0.2.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
