--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "hbs": "^4.0.1",
     "html-webpack-exclude-assets-plugin": "^0.0.7",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.10",
     "material-ui": "next",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.12",
