connect color to color picker

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-async-component": "^2.0.0",
+    "react-color": "^2.14.1",
     "react-css-modules": "^4.7.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^15.6.1",
