--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^4.0.1",
+    "react-loadable": "^5.4.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.0",
